--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.15.0",
+    "mysql2": "^3.15.1",
+    "path": "^0.12.7",
     "sqlite3": "^5.1.7"
   }
 }
